<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">SMS Router</string>
    <string name="action_new">New</string>
    <string name="action_add">Add</string>
    <string name="action_edit_groups">Manage Groups</string>
    <string name="action_edit_syntax">Edit Syntax</string>
    <string name="action_view_log">Show Log</string>
    <string name="action_about">About</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_new_group_title">New Group</string>
    <string name="dialog_new_group_name">Name</string>
    <string name="dialog_new_tag_title">New Tag</string>
    <string name="dialog_rename_title">Rename</string>
    <string name="dialog_rename_name">New Name</string>
    <string name="standard_syntax" translatable="false">\@[tag]:</string>
    <string-array name="tag_options_dialog">
        <item>Select Groups</item>
        <item>Options</item>
        <item>Rename</item>
        <item>Delete</item>
    </string-array>
    <string-array name="group_options_dialog">
        <item>Edit</item>
        <item>Rename</item>
        <item>Delete</item>
    </string-array>
    <string-array name="tag_options_options">
        <item>Enabled</item>
        <item>Moderate messages</item>
    </string-array>
    <string name="group_settings_note">Tap and hold to delete</string>
    <string name="select_groups">Select Groups</string>
    <string name="about" translatable="false">SMS Router 1.1 Build 5\n© 2015 Micha Hanselmann\nThis app is released under the MIT license.</string>
    <string name="notification">SMS from \'%1$s\' was forwarded to tag \'%2$s\' (%3$d)</string>
    <string name="moderation">Forward SMS with content \'%4$s\' from \'%1$s\' to tag \'%2$s\' (%3$d)?</string>
    <string name="error">Error:&#160;</string>
    <string name="enabled">Enabled</string>
    <string name="options">Options</string>

</resources>
